--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -24,58 +26,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <title>Proyecto - Rick &amp; Morty</title>
+    <title>React App</title>
   </head>
   <body>
-  
-    <header class="principal-search container-fluid d-flex flex-column justify-content-center align-items-center">
-      <div class="container-header  d-flex flex-column justify-content-center">
-
- 
-          <h1 class="row justify-content-center">Proyecto - Rick &amp; Morty</h1>
-  
-             
-      </div>
-
-  </header>
-    <header class="principal-search container-fluid d-flex flex-column justify-content-center align-items-center">
-      <div class="container-header  d-flex flex-column justify-content-center">
-
- 
-          <h1 class="row justify-content-center">Proyecto - Rick &amp; Morty</h1>
-  
-          <nav class="row navbar align-items-center">
-              <ul class="nav nav-pills  justify-content-center">
-                  <li class="nav-item">
-                  <a class="nav-link active m-2 p-3 botones " href="./personajes.html"> Characters</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link  active m-2 p-3 botones" href="./contacto.html">  Contact</a>
-                  </li>
-              </ul>
-          </nav>            
-      </div>
-
-  </header>
-  <header class="principal-search container-fluid d-flex flex-column justify-content-center  align-items-center">
-      <div class="container-header  d-flex flex-column justify-content-center">
-        <h1 class="row justify-content-center">Proyecto - Rick & Morty</h1>
-        <nav class="row navbar align-items-center">
-          <ul class="nav nav-pills  justify-content-center">
-            <li class="nav-item">
-              <a class="nav-link active m-2 p-3 botones " href="./personajes.html"> Characters</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link  active m-2 p-3 botones" href="./contacto.html"> Contact</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-    </header>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -86,6 +41,8 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script> 
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
   </body>
 </html>
+
